# Ambient-Loop-FINAL

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
Test/: test_mail_read_status.py
agent/: __init__.py  backup.py  graph.py  nodes.py  prompts.py  state.py  tools.py
api/: __init__.py  server.py
config/: langgraph.json
data/: __init__.py  data.py  memory.py  seed_policies.py  seed_products.py  service.py
db/: __init__.py  models.py  session.py
erp/: __init__.py  data.py  models.py  service.py
integration/: __init__.py  mail_api.py  state.json
scr/: .gitignore
scr/Agent/: .gitignore  api_server.py  backup.py  config.json  credentials.json  graph.py  init_db.py  mail_api.py  nodes.py  state.json  state.py  token.pickle  tools.py
scr/Agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
scr/Agent/database/: memory.py  seed_policies.py  seed_products.py  ticket_db.py
scripts/: init_db.py
server/: graph.py  langgraph.json  webapp.py
tests/: __init__.py  test_erp_integration.py  test_mail_read_status.py  test_messages.py
